--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   intl: ^0.16.1
   flutter_icons: ^1.1.0
   url_launcher: ^5.4.10
-  flutter_linkify: ^3.1.3
+  auto_size_text: ^2.1.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
