--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.1.2
+  provider: ^4.3.3
   intl: ^0.16.1
   flutter_icons: ^1.1.0
-  url_launcher: ^5.5.0
+  url_launcher: ^5.7.10
   auto_size_text: ^2.1.0
-  flutter_svg: ^0.18.0
+  flutter_svg: ^0.20.0-nullsafety.3
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
